Gradle_externalController/app/src/main/java/plata/PLATAParser.java
// Generated from PLATA.g4 by ANTLR 4.13.2
package plata;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PLATAParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, AVANZAR=7, AJUSTAR_VELOCIDAD=8, 
		RETROCEDER=9, FRENAR=10, IR_A=11, IR_ORIGEN=12, GIRAR=13, GIRAR_DERECHA=14, 
		GIRAR_IZQUIERDA=15, GIRAR_SENTIDO_CONTRARIO=16, INICIAR_TAREA=17, FINALIZAR_TAREA=18, 
		MOSTRAR=19, ADVANCE=20, SET_SPEED=21, REVERSE=22, BRAKE=23, GO_TO=24, 
		GO_TO_ORIGIN=25, TURN=26, TURN_RIGHT=27, TURN_LEFT=28, TURN_OPPOSITE_DIRECTION=29, 
		STAR_TASK=30, FINISH_TASK=31, SHOW=32, MIENTRAS=33, SI_NO_SI=34, SI_NO=35, 
		SI=36, VERDAD=37, FALSO=38, NULO=39, WHILE=40, ELSE_IF=41, ELSE=42, IF=43, 
		TRUE=44, FALSE=45, NULL=46, MENOS=47, MULTIPLICACION=48, DIVISION=49, 
		MODULO=50, SUMA=51, MAYOR_IGUAL=52, MENOR_IGUAL=53, MAYOR=54, MENOR=55, 
		DISTINTO=56, IGUAL_QUE=57, NOT=58, AND=59, OR=60, INT=61, FLOAT=62, STRING=63, 
		ID=64, LINE_COMMENT=65, COMMENT=66, WS=67;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_avanzar = 2, RULE_ajustar_velocidad = 3, 
		RULE_retroceder = 4, RULE_frenar = 5, RULE_irA = 6, RULE_irOrigen = 7, 
		RULE_girar = 8, RULE_girar_derecha = 9, RULE_girar_izquierda = 10, RULE_girar_sentido_contrario = 11, 
		RULE_iniciarTarea = 12, RULE_finalizarTarea = 13, RULE_mostrar = 14, RULE_asignacion = 15, 
		RULE_if_sentencia = 16, RULE_bucle_while = 17, RULE_bloque = 18, RULE_expr = 19, 
		RULE_expr_aritmeticas = 20, RULE_expr_relacionales = 21, RULE_expr_logica = 22, 
		RULE_atomico = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "avanzar", "ajustar_velocidad", "retroceder", 
			"frenar", "irA", "irOrigen", "girar", "girar_derecha", "girar_izquierda", 
			"girar_sentido_contrario", "iniciarTarea", "finalizarTarea", "mostrar", 
			"asignacion", "if_sentencia", "bucle_while", "bloque", "expr", "expr_aritmeticas", 
			"expr_relacionales", "expr_logica", "atomico"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "','", "')'", "'='", "'{'", "'}'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'-'", "'*'", "'/'", "'%'", "'+'", "'>='", "'<='", "'>'", "'<'", "'!='", 
			"'=='", "'!'", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "AVANZAR", "AJUSTAR_VELOCIDAD", 
			"RETROCEDER", "FRENAR", "IR_A", "IR_ORIGEN", "GIRAR", "GIRAR_DERECHA", 
			"GIRAR_IZQUIERDA", "GIRAR_SENTIDO_CONTRARIO", "INICIAR_TAREA", "FINALIZAR_TAREA", 
			"MOSTRAR", "ADVANCE", "SET_SPEED", "REVERSE", "BRAKE", "GO_TO", "GO_TO_ORIGIN", 
			"TURN", "TURN_RIGHT", "TURN_LEFT", "TURN_OPPOSITE_DIRECTION", "STAR_TASK", 
			"FINISH_TASK", "SHOW", "MIENTRAS", "SI_NO_SI", "SI_NO", "SI", "VERDAD", 
			"FALSO", "NULO", "WHILE", "ELSE_IF", "ELSE", "IF", "TRUE", "FALSE", "NULL", 
			"MENOS", "MULTIPLICACION", "DIVISION", "MODULO", "SUMA", "MAYOR_IGUAL", 
			"MENOR_IGUAL", "MAYOR", "MENOR", "DISTINTO", "IGUAL_QUE", "NOT", "AND", 
			"OR", "INT", "FLOAT", "STRING", "ID", "LINE_COMMENT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PLATA.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PLATAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PLATAParser.EOF, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				sentencia();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & -1152819550673174591L) != 0) );
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public AvanzarContext avanzar() {
			return getRuleContext(AvanzarContext.class,0);
		}
		public GirarContext girar() {
			return getRuleContext(GirarContext.class,0);
		}
		public Girar_izquierdaContext girar_izquierda() {
			return getRuleContext(Girar_izquierdaContext.class,0);
		}
		public Girar_derechaContext girar_derecha() {
			return getRuleContext(Girar_derechaContext.class,0);
		}
		public FrenarContext frenar() {
			return getRuleContext(FrenarContext.class,0);
		}
		public RetrocederContext retroceder() {
			return getRuleContext(RetrocederContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public IrAContext irA() {
			return getRuleContext(IrAContext.class,0);
		}
		public Ajustar_velocidadContext ajustar_velocidad() {
			return getRuleContext(Ajustar_velocidadContext.class,0);
		}
		public IniciarTareaContext iniciarTarea() {
			return getRuleContext(IniciarTareaContext.class,0);
		}
		public FinalizarTareaContext finalizarTarea() {
			return getRuleContext(FinalizarTareaContext.class,0);
		}
		public Girar_sentido_contrarioContext girar_sentido_contrario() {
			return getRuleContext(Girar_sentido_contrarioContext.class,0);
		}
		public IrOrigenContext irOrigen() {
			return getRuleContext(IrOrigenContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public If_sentenciaContext if_sentencia() {
			return getRuleContext(If_sentenciaContext.class,0);
		}
		public Bucle_whileContext bucle_while() {
			return getRuleContext(Bucle_whileContext.class,0);
		}
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				avanzar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				girar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				girar_izquierda();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				girar_derecha();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				frenar();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(60);
				retroceder();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(61);
				mostrar();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(62);
				irA();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(63);
				ajustar_velocidad();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(64);
				iniciarTarea();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(65);
				finalizarTarea();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(66);
				girar_sentido_contrario();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(67);
				irOrigen();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(68);
				asignacion();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(69);
				if_sentencia();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(70);
				bucle_while();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(71);
				expr_aritmeticas(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AvanzarContext extends ParserRuleContext {
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public TerminalNode AVANZAR() { return getToken(PLATAParser.AVANZAR, 0); }
		public TerminalNode ADVANCE() { return getToken(PLATAParser.ADVANCE, 0); }
		public AvanzarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_avanzar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitAvanzar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AvanzarContext avanzar() throws RecognitionException {
		AvanzarContext _localctx = new AvanzarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_avanzar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !(_la==AVANZAR || _la==ADVANCE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(75);
			match(T__0);
			setState(76);
			expr_aritmeticas(0);
			setState(77);
			match(T__1);
			setState(78);
			expr_aritmeticas(0);
			setState(79);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ajustar_velocidadContext extends ParserRuleContext {
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public TerminalNode AJUSTAR_VELOCIDAD() { return getToken(PLATAParser.AJUSTAR_VELOCIDAD, 0); }
		public TerminalNode SET_SPEED() { return getToken(PLATAParser.SET_SPEED, 0); }
		public Ajustar_velocidadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ajustar_velocidad; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitAjustar_velocidad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ajustar_velocidadContext ajustar_velocidad() throws RecognitionException {
		Ajustar_velocidadContext _localctx = new Ajustar_velocidadContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ajustar_velocidad);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_la = _input.LA(1);
			if ( !(_la==AJUSTAR_VELOCIDAD || _la==SET_SPEED) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(82);
			match(T__0);
			setState(83);
			expr_aritmeticas(0);
			setState(84);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RetrocederContext extends ParserRuleContext {
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public TerminalNode RETROCEDER() { return getToken(PLATAParser.RETROCEDER, 0); }
		public TerminalNode REVERSE() { return getToken(PLATAParser.REVERSE, 0); }
		public RetrocederContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retroceder; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitRetroceder(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetrocederContext retroceder() throws RecognitionException {
		RetrocederContext _localctx = new RetrocederContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_retroceder);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !(_la==RETROCEDER || _la==REVERSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(87);
			match(T__0);
			setState(88);
			expr_aritmeticas(0);
			setState(89);
			match(T__1);
			setState(90);
			expr_aritmeticas(0);
			setState(91);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FrenarContext extends ParserRuleContext {
		public TerminalNode FRENAR() { return getToken(PLATAParser.FRENAR, 0); }
		public TerminalNode BRAKE() { return getToken(PLATAParser.BRAKE, 0); }
		public FrenarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_frenar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitFrenar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FrenarContext frenar() throws RecognitionException {
		FrenarContext _localctx = new FrenarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_frenar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==FRENAR || _la==BRAKE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IrAContext extends ParserRuleContext {
		public List<Expr_aritmeticasContext> expr_aritmeticas() {
			return getRuleContexts(Expr_aritmeticasContext.class);
		}
		public Expr_aritmeticasContext expr_aritmeticas(int i) {
			return getRuleContext(Expr_aritmeticasContext.class,i);
		}
		public TerminalNode IR_A() { return getToken(PLATAParser.IR_A, 0); }
		public TerminalNode GO_TO() { return getToken(PLATAParser.GO_TO, 0); }
		public IrAContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_irA; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitIrA(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IrAContext irA() throws RecognitionException {
		IrAContext _localctx = new IrAContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_irA);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==IR_A || _la==GO_TO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(96);
			match(T__0);
			setState(97);
			expr_aritmeticas(0);
			setState(98);
			match(T__1);
			setState(99);
			expr_aritmeticas(0);
			setState(100);
			match(T__1);
			setState(101);
			expr_aritmeticas(0);
			setState(102);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IrOrigenContext extends ParserRuleContext {
		public TerminalNode IR_ORIGEN() { return getToken(PLATAParser.IR_ORIGEN, 0); }
		public TerminalNode GO_TO_ORIGIN() { return getToken(PLATAParser.GO_TO_ORIGIN, 0); }
		public IrOrigenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_irOrigen; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitIrOrigen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IrOrigenContext irOrigen() throws RecognitionException {
		IrOrigenContext _localctx = new IrOrigenContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_irOrigen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==IR_ORIGEN || _la==GO_TO_ORIGIN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GirarContext extends ParserRuleContext {
		public Expr_aritmeticasContext expr_aritmeticas() {
			return getRuleContext(Expr_aritmeticasContext.class,0);
		}
		public TerminalNode GIRAR() { return getToken(PLATAParser.GIRAR, 0); }
		public TerminalNode TURN() { return getToken(PLATAParser.TURN, 0); }
		public GirarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_girar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitGirar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GirarContext girar() throws RecognitionException {
		GirarContext _localctx = new GirarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_girar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !(_la==GIRAR || _la==TURN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(107);
			match(T__0);
			setState(108);
			expr_aritmeticas(0);
			setState(109);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Girar_derechaContext extends ParserRuleContext {
		public TerminalNode GIRAR_DERECHA() { return getToken(PLATAParser.GIRAR_DERECHA, 0); }
		public TerminalNode TURN_RIGHT() { return getToken(PLATAParser.TURN_RIGHT, 0); }
		public Girar_derechaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_girar_derecha; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PLATAVisitor ) return ((PLATAVisitor<? extends T>)visitor).visitGirar_derecha(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Girar_derechaContext girar_derecha() throws RecognitionException {
		Girar_derechaContext _localctx = new Girar_derechaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_girar_derecha);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_la = _input.LA(1);
			if ( !(_la==GIRAR_DERECHA || _la==TURN_RIGHT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
